FIX: sjednocen gap

--- a/educhemlp.client/src/pages/app/Chat.scss
+++ b/educhemlp.client/src/pages/app/Chat.scss
@@ -93,7 +93,7 @@
                         align-items: center;
                         display: flex;
                         flex-wrap: wrap;
-                        gap: 0 12px;
+                        gap: 0 4px;
 
                         >.role {
                             font-size: 14px;
